# myriade

./: .gitignore  Benchmarks.ipynb  LICENSE  README.md  Workbench.ipynb  pyproject.toml  pytest.ini  setup.py
.github/actions/install-env/: action.yml
myriad/: __init__.py  datasets.py  myriad.py  test_myriad.py
myriade/: __init__.py  base.py  branch.py  datasets.py
myriade/multiclass/: __init__.py  balanced.py  manual.py  optimal.py  random.py  test_manual.py
