[tool.poetry]
name = "myriade"
version = "0.2.0"
description = "Hierarchical extreme multiclass and multi-label classification."
authors = ["Max Halford <maxhalford25@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=README.md",
    "--verbose",
    "-ra",
    "--color=yes",
]
doctest_optionflags = "NORMALIZE_WHITESPACE NUMBER ELLIPSIS"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.9.3"
scikit-learn = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
pytest = "^7.2.0"
graphviz = "^0.20.1"

[build-system]
requires = ["poetry-core", "cython"]
build-backend = "poetry.core.masonry.api"
